# GameFrame

./: CMakeLists.txt  README
cmake/: FindCppUnit.cmake
demo/: CMakeLists.txt  main.cpp
doc/: Justifications.txt
gf/: CMakeLists.txt  Entity.cpp  Entity.h  EntityComponent.cpp  EntityComponent.h  EntityManager.cpp  EntityManager.h  EntitySystem.cpp  EntitySystem.h  EntitySystemThread.cpp  EntitySystemThread.h  EntityTemplate.cpp  EntityTemplate.h  Exceptions.cpp  Exceptions.h  GameFrame.cpp  GameFrame.h  Global.cpp  Global.h  Message.cpp  Message.h  MessageManager.cpp  MessageManager.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourceTemplate.cpp  ResourceTemplate.h  template.h
gf/core/: CMakeLists.txt  CoreMessages.cpp  CoreMessages.h  CoreSystem.cpp  CoreSystem.h
gf/sdl/: CMakeLists.txt  GameFrameSDL.cpp  GameFrameSDL.h  ImageTemplate.cpp  ImageTemplate.h  PositionComponent.cpp  PositionComponent.h  RenderableComponent.cpp  RenderableComponent.h  SDLEventSystem.cpp  SDLEventSystem.h  Sprite.cpp  Sprite.h  WindowSystem.cpp  WindowSystem.h
test/: CMakeLists.txt  DummyComponent.cpp  DummyComponent.h  DummyMessage.cpp  DummyMessage.h  DummyResource.cpp  DummyResource.h  DummyResourceTemplate.cpp  DummyResourceTemplate.h  EmptyMessage.cpp  EmptyMessage.h  EntityManagerTest.cpp  EntityManagerTest.h  MessageManagerTest.cpp  MessageManagerTest.h  PositionComponent.cpp  PositionComponent.h  ResourceManagerTest.cpp  ResourceManagerTest.h  TestEntityTemplate.cpp  TestEntityTemplate.h  TestSystem.cpp  TestSystem.h  VelocityComponent.cpp  VelocityComponent.h  main.cpp
